--- a/helpers/updatetwitter.config.inc.php.sample
+++ b/helpers/updatetwitter.config.inc.php.sample
@@ -8,3 +8,12 @@
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
+    Dash Ninja is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+    You should have received a copy of the GNU General Public License
+    along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+// MySQL access, user needs write access to Dash Ninja Database cmd_twitter table
